; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_chain.c_CRYPT_FindIssuer.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_chain.c_CRYPT_FindIssuer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i64 }
%struct.TYPE_13__ = type { i32 }
%struct.TYPE_12__ = type { i32, i32* }

@.str = private unnamed_addr constant [19 x i8] c"Found in store %p\0A\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"Found in world %p\0A\00", align 1
@URL_OID_CERTIFICATE_ISSUER = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [15 x i8] c"Trying URL %s\0A\00", align 1
@CONTEXT_OID_CERTIFICATE = common dso_local global i32 0, align 4
@CERT_CHAIN_CACHE_ONLY_URL_RETRIEVAL = common dso_local global i32 0, align 4
@CRYPT_CACHE_ONLY_RETRIEVAL = common dso_local global i32 0, align 4
@CRYPT_AIA_RETRIEVAL = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [38 x i8] c"CryptRetrieveObjectByUrlW failed: %u\0A\00", align 1
@CERT_STORE_PROV_MEMORY = common dso_local global i32 0, align 4
@CERT_STORE_CREATE_NEW_FLAG = common dso_local global i32 0, align 4
@CERT_STORE_ADD_NEW = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [28 x i8] c"Found downloaded issuer %p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_11__*, %struct.TYPE_13__*, i64, i32, i8*, i32, i32*)* @CRYPT_FindIssuer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @CRYPT_FindIssuer(%struct.TYPE_11__* %0, %struct.TYPE_13__* %1, i64 %2, i32 %3, i8* %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_11__*, align 8
  %10 = alloca %struct.TYPE_13__*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca %struct.TYPE_12__*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i64, align 8
  %20 = alloca %struct.TYPE_13__*, align 8
  %21 = alloca i64, align 8
  %22 = alloca i32, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %9, align 8
  store %struct.TYPE_13__* %1, %struct.TYPE_13__** %10, align 8
  store i64 %2, i64* %11, align 8
  store i32 %3, i32* %12, align 4
  store i8* %4, i8** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  %23 = load i64, i64* %11, align 8
  %24 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %25 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* %12, align 4
  %28 = load i8*, i8** %13, align 8
  %29 = load i32*, i32** %15, align 8
  %30 = call i32* @CertFindCertificateInStore(i64 %23, i32 %26, i32 0, i32 %27, i8* %28, i32* %29)
  store i32* %30, i32** %17, align 8
  %31 = load i32*, i32** %17, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %33, label %37

33:                                               ; preds = %7
  %34 = load i32*, i32** %17, align 8
  %35 = call i32 @TRACE(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32* %34)
  %36 = load i32*, i32** %17, align 8
  store i32* %36, i32** %8, align 8
  br label %162

37:                                               ; preds = %7
  %38 = load i32*, i32** %15, align 8
  %39 = icmp ne i32* %38, null
  br i1 %39, label %40, label %41

40:                                               ; preds = %37
  store i32* null, i32** %8, align 8
  br label %162

41:                                               ; preds = %37
  %42 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %43 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %63

46:                                               ; preds = %41
  %47 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %48 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %51 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = load i32, i32* %12, align 4
  %54 = load i8*, i8** %13, align 8
  %55 = call i32* @CertFindCertificateInStore(i64 %49, i32 %52, i32 0, i32 %53, i8* %54, i32* null)
  store i32* %55, i32** %17, align 8
  %56 = load i32*, i32** %17, align 8
  %57 = icmp ne i32* %56, null
  br i1 %57, label %58, label %62

58:                                               ; preds = %46
  %59 = load i32*, i32** %17, align 8
  %60 = call i32 @TRACE(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i32* %59)
  %61 = load i32*, i32** %17, align 8
  store i32* %61, i32** %8, align 8
  br label %162

62:                                               ; preds = %46
  br label %63

63:                                               ; preds = %62, %41
  %64 = load i32, i32* @URL_OID_CERTIFICATE_ISSUER, align 4
  %65 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %66 = bitcast %struct.TYPE_13__* %65 to i8*
  %67 = call i64 @CryptGetObjectUrl(i32 %64, i8* %66, i32 0, %struct.TYPE_12__* null, i32* %18, i32* null, i32* null, i32* null)
  store i64 %67, i64* %19, align 8
  %68 = load i64, i64* %19, align 8
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %71, label %70

70:                                               ; preds = %63
  store i32* null, i32** %8, align 8
  br label %162

71:                                               ; preds = %63
  %72 = call i32 (...) @GetProcessHeap()
  %73 = load i32, i32* %18, align 4
  %74 = call %struct.TYPE_12__* @HeapAlloc(i32 %72, i32 0, i32 %73)
  store %struct.TYPE_12__* %74, %struct.TYPE_12__** %16, align 8
  %75 = load %struct.TYPE_12__*, %struct.TYPE_12__** %16, align 8
  %76 = icmp ne %struct.TYPE_12__* %75, null
  br i1 %76, label %78, label %77

77:                                               ; preds = %71
  store i32* null, i32** %8, align 8
  br label %162

78:                                               ; preds = %71
  %79 = load i32, i32* @URL_OID_CERTIFICATE_ISSUER, align 4
  %80 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %81 = bitcast %struct.TYPE_13__* %80 to i8*
  %82 = load %struct.TYPE_12__*, %struct.TYPE_12__** %16, align 8
  %83 = call i64 @CryptGetObjectUrl(i32 %79, i8* %81, i32 0, %struct.TYPE_12__* %82, i32* %18, i32* null, i32* null, i32* null)
  store i64 %83, i64* %19, align 8
  %84 = load i64, i64* %19, align 8
  %85 = icmp ne i64 %84, 0
  br i1 %85, label %86, label %157

86:                                               ; preds = %78
  store i32 0, i32* %22, align 4
  br label %87

87:                                               ; preds = %153, %86
  %88 = load i32, i32* %22, align 4
  %89 = load %struct.TYPE_12__*, %struct.TYPE_12__** %16, align 8
  %90 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %89, i32 0, i32 0
  %91 = load i32, i32* %90, align 8
  %92 = icmp ult i32 %88, %91
  br i1 %92, label %93, label %156

93:                                               ; preds = %87
  %94 = load %struct.TYPE_12__*, %struct.TYPE_12__** %16, align 8
  %95 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %94, i32 0, i32 1
  %96 = load i32*, i32** %95, align 8
  %97 = load i32, i32* %22, align 4
  %98 = zext i32 %97 to i64
  %99 = getelementptr inbounds i32, i32* %96, i64 %98
  %100 = load i32, i32* %99, align 4
  %101 = call i32* @debugstr_w(i32 %100)
  %102 = call i32 @TRACE(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i32* %101)
  %103 = load %struct.TYPE_12__*, %struct.TYPE_12__** %16, align 8
  %104 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %103, i32 0, i32 1
  %105 = load i32*, i32** %104, align 8
  %106 = load i32, i32* %22, align 4
  %107 = zext i32 %106 to i64
  %108 = getelementptr inbounds i32, i32* %105, i64 %107
  %109 = load i32, i32* %108, align 4
  %110 = load i32, i32* @CONTEXT_OID_CERTIFICATE, align 4
  %111 = load i32, i32* %14, align 4
  %112 = load i32, i32* @CERT_CHAIN_CACHE_ONLY_URL_RETRIEVAL, align 4
  %113 = and i32 %111, %112
  %114 = icmp ne i32 %113, 0
  br i1 %114, label %115, label %117

115:                                              ; preds = %93
  %116 = load i32, i32* @CRYPT_CACHE_ONLY_RETRIEVAL, align 4
  br label %119

117:                                              ; preds = %93
  %118 = load i32, i32* @CRYPT_AIA_RETRIEVAL, align 4
  br label %119

119:                                              ; preds = %117, %115
  %120 = phi i32 [ %116, %115 ], [ %118, %117 ]
  %121 = bitcast %struct.TYPE_13__** %20 to i8**
  %122 = call i64 @CryptRetrieveObjectByUrlW(i32 %109, i32 %110, i32 %120, i32 0, i8** %121, i32* null, i32* null, i32* null, i32* null)
  store i64 %122, i64* %19, align 8
  %123 = load i64, i64* %19, align 8
  %124 = icmp ne i64 %123, 0
  br i1 %124, label %128, label %125

125:                                              ; preds = %119
  %126 = call i32* (...) @GetLastError()
  %127 = call i32 @TRACE(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.3, i64 0, i64 0), i32* %126)
  br label %153

128:                                              ; preds = %119
  %129 = load i32, i32* @CERT_STORE_PROV_MEMORY, align 4
  %130 = load i32, i32* @CERT_STORE_CREATE_NEW_FLAG, align 4
  %131 = call i64 @CertOpenStore(i32 %129, i32 0, i32 0, i32 %130, i32* null)
  store i64 %131, i64* %21, align 8
  %132 = load i64, i64* %21, align 8
  %133 = load %struct.TYPE_13__*, %struct.TYPE_13__** %20, align 8
  %134 = load i32, i32* @CERT_STORE_ADD_NEW, align 4
  %135 = call i32 @CertAddCertificateContextToStore(i64 %132, %struct.TYPE_13__* %133, i32 %134, i32* null)
  %136 = load i64, i64* %21, align 8
  %137 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %138 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %137, i32 0, i32 0
  %139 = load i32, i32* %138, align 4
  %140 = load i32, i32* %12, align 4
  %141 = load i8*, i8** %13, align 8
  %142 = call i32* @CertFindCertificateInStore(i64 %136, i32 %139, i32 0, i32 %140, i8* %141, i32* null)
  store i32* %142, i32** %17, align 8
  %143 = load %struct.TYPE_13__*, %struct.TYPE_13__** %20, align 8
  %144 = call i32 @CertFreeCertificateContext(%struct.TYPE_13__* %143)
  %145 = load i64, i64* %21, align 8
  %146 = call i32 @CertCloseStore(i64 %145, i32 0)
  %147 = load i32*, i32** %17, align 8
  %148 = icmp ne i32* %147, null
  br i1 %148, label %149, label %152

149:                                              ; preds = %128
  %150 = load i32*, i32** %17, align 8
  %151 = call i32 @TRACE(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.4, i64 0, i64 0), i32* %150)
  br label %156

152:                                              ; preds = %128
  br label %153

153:                                              ; preds = %152, %125
  %154 = load i32, i32* %22, align 4
  %155 = add i32 %154, 1
  store i32 %155, i32* %22, align 4
  br label %87

156:                                              ; preds = %149, %87
  br label %157

157:                                              ; preds = %156, %78
  %158 = call i32 (...) @GetProcessHeap()
  %159 = load %struct.TYPE_12__*, %struct.TYPE_12__** %16, align 8
  %160 = call i32 @HeapFree(i32 %158, i32 0, %struct.TYPE_12__* %159)
  %161 = load i32*, i32** %17, align 8
  store i32* %161, i32** %8, align 8
  br label %162

162:                                              ; preds = %157, %77, %70, %58, %40, %33
  %163 = load i32*, i32** %8, align 8
  ret i32* %163
}

declare dso_local i32* @CertFindCertificateInStore(i64, i32, i32, i32, i8*, i32*) #1

declare dso_local i32 @TRACE(i8*, i32*) #1

declare dso_local i64 @CryptGetObjectUrl(i32, i8*, i32, %struct.TYPE_12__*, i32*, i32*, i32*, i32*) #1

declare dso_local %struct.TYPE_12__* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32* @debugstr_w(i32) #1

declare dso_local i64 @CryptRetrieveObjectByUrlW(i32, i32, i32, i32, i8**, i32*, i32*, i32*, i32*) #1

declare dso_local i32* @GetLastError(...) #1

declare dso_local i64 @CertOpenStore(i32, i32, i32, i32, i32*) #1

declare dso_local i32 @CertAddCertificateContextToStore(i64, %struct.TYPE_13__*, i32, i32*) #1

declare dso_local i32 @CertFreeCertificateContext(%struct.TYPE_13__*) #1

declare dso_local i32 @CertCloseStore(i64, i32) #1

declare dso_local i32 @HeapFree(i32, i32, %struct.TYPE_12__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
